# dograpper

./: .docsignore.example  .dograpper.json.example  .gitignore  CLAUDE.md  README.md  SECURITY.md  about_dograpper.md  dograpper.spec  dograpper_entry.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: guard-temporario.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: migration-v0.1-v0.2.md  schema-v1.md
docs/adr/: 0001-record-architecture-decisions.md  0002-no-repomix-pure-python-concatenation.md  0003-word-count-not-bytes.md  0004-optional-native-deps-conditional-import.md
docs/workflows/: delta-maintenance.md  notebooklm-optimization.md  rag-ingestion.md
hooks/: rthook_dograpper.py
scripts/: install.sh
src/dograpper/: __init__.py  __main__.py  cli.py
src/dograpper/commands/: doctor.py  download.py  (+2 more)
test-docs/click.palletsprojects.com/: robots.txt
tests/: test_boundary_chunking.py  test_bundle_notebooklm.py  test_cli_regression.py  test_cli_smoke.py  test_config.py  test_content_extractor.py  test_context_v1.py  test_dedup.py  test_delta_manifest.py  test_dep_resolver.py  test_doctor.py  test_download.py  test_download_cascade.py  test_dry_run.py  test_e2e.py  test_heading_extractor.py  test_jsonl_format.py  test_link_extractor.py  test_llms_txt_parser.py  test_pack.py  test_scorer.py  test_sitemap_parser.py  test_sync.py  test_token_counter.py  test_url_filter.py
tests/fixtures/: help_baseline.txt
(+59 files in other folders)
